<resources>
    <string name="app_name">Timeless-Haul</string>
    <string name="dont_have_an_account_signin" />
    <string name="dont_have_an_account_signup">Dont have an account? Signup</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="help">Help</string>
    <string name="donate">Donate</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="men">Men</string>
    <string name="children">Children</string>
    <string name="women">Women</string>
    <string name="newarrivals">Newarrivals</string>
    <string name="shoes">Shoes</string>
    <string name="onsale_and_offers">Onsale and Offers</string>
    <string name="settings">\n\n\n\n</string>
    <string name="Feedback">\n</string>
    <string name="Children">#Children</string>
    <string name="order">order</string>
    <string name="oRder">Order</string>
    <string name="ORder">Order</string>
    <string name="for_more_information_kindly_contact_shekijojo05_gmail_com">For more information kindly contact shekijojo05@gmail.com</string>
    <string name="let_us_make_a_difference_in_our_society_together">Let us make a difference in our society together</string>
    <string name="if_you_are_willing_to_be_a_part_of_the_childrens_home_visit_you_can_fill_in_the_form_at_the_dropoff_stations_and_you_will_be_added_to_the_group_where_information_concerning_the_visits_are_provided">If you are willing to be a part of the childrens home visit you can fill in the form at the dropoff stations and you will be added to the group where information concerning the visits are provided</string>
    <string name="you_can_donate_clothes_to_the_less_fortunate_through_our_app_through_it_you_will_be_directed_to_the_nearest_dropoff_location_for_the_items_you_wish_to_donate_the_donated_items_will_be_taken_to_the_childrens_home_and_evidence_of_the_childrens_home_visit_will_be_displayed_here">you can donate clothes to the less fortunate through our app through it you will be directed to the nearest dropoff location for the items you wish to donate the donated items will be taken to the childrens home and evidence of the childrens home visit will be displayed here</string>
    <string name="your_feedback_matters_to_us">Your feedback matters to us</string>
    <string name="submit">Submit</string>
    <string name="leave_your_reviews_here">Leave your reviews here</string>
    <string name="Leave_your_reviews_here">Leave your reviews here</string>
    <string name="get_clothings_and_shoes_of_your_choice_at_a_resonable_price">Get clothings and shoes of your choice at a resonable price</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="cs_haven">CS Haven</string>
    <string name="seek_for_help_by_sending_an_email_about_the_issue_you_are_experiencing_directly_to_shekijojo05_gmail_com_to_get_a_direct_feedback">Seek for help by sending an email about the issue you are experiencing directly to shekijojo05@gmail.com to get a direct feedback</string>
    <string name="OrdeR">Order</string>
    <string name="oorder">Order</string>
    <string name="mMen">#Men</string>
    <string name="oRDer">Order</string>
    <string name="ordeR">Order</string>
    <string name="nNnewarrivals">Newarrivals</string>
    <string name="onsale">Onsale</string>
    <string name="ordER">Order</string>
    <string name="orDDer">Order</string>
    <string name="_4_send_your_business_proposal_to_shekijojo05_gamil_com_and_more_details_will_be_communicated_their_on_how_to_go_about_your_business">4.Send your business proposal to shekijojo05@gamil.com and more details will be communicated their on how to go about your business</string>
    <string name="_3_enter_your_phone_number">3.Enter Your Phone Number</string>
    <string name="_2_enter_the_descrition_of_the_goods_you_are_selling">2.Enter the descrition of the goods you are selling</string>
    <string name="_1_upload_your_profile_photo">1.Upload your profile photo</string>
    <string name="enter_your_business_number">Enter your business number</string>
    <string name="submiT">Submit</string>
    <string name="upload_profile_photo">Upload profile photo</string>
    <string name="eg_mens_women_childrens_clothes">eg.mens women childrens clothes</string>
    <string name="profile_photo">Profile photo</string>
    <string name="change_email">Change Email</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="change">Change</string>
    <string name="confirm_new_email">Confirm new email</string>
    <string name="new_email">New email</string>
    <string name="old_email">Old email</string>
    <string name="orDER">Order</string>
    <string name="ORDer">Order</string>
    <string name="womeN">#Women</string>
    <string name="OrdER">Order</string>
    <string name="ORDER">Order</string>
    <string name="SHOES">#Shoes</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_login">Already have an account login</string>
    <string name="confirm_password">Confirm password</string>
</resources>