<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <SearchView
        android:layout_width="204dp"
        android:layout_height="46dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="684dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_cart"
        android:layout_width="77dp"
        android:layout_height="59dp"
        android:layout_marginStart="330dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="672dp"
        android:contentDescription="@string/cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@drawable/cart"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cart" />

    <Button
        android:id="@+id/btnmen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="621dp"
        android:backgroundTint="#D32F2F"
        android:text="@string/men"
        android:textColor="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnchildren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="621dp"
        android:backgroundTint="#FFA000"
        android:text="@string/children"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnwomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="621dp"
        android:backgroundTint="#1387FA"
        android:text="@string/women"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNewArrivals"
        android:layout_width="134dp"
        android:layout_height="51dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="565dp"
        android:backgroundTint="#19BDAA"
        android:text="@string/newarrivals"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnshoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="621dp"
        android:backgroundTint="#7DBD44"
        android:text="@string/shoes"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOnsale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="565dp"
        android:backgroundTint="#F8FF44"
        android:text="@string/onsale_and_offers"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="404dp"
        android:layout_height="493dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comingg"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imgsettings"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="672dp"
        android:layout_marginEnd="339dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setings" />

    <ImageView
        android:id="@+id/imgFeedback"
        android:layout_width="83dp"
        android:layout_height="55dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="672dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/Feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feedbaclk"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imghome"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="672dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imgDonate"
        android:layout_width="78dp"
        android:layout_height="55dp"
        android:layout_marginStart="262dp"
        android:layout_marginTop="672dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/donate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donate" />

    <ImageView
        android:id="@+id/imgHelp"
        android:layout_width="64dp"
        android:layout_height="56dp"
        android:layout_marginStart="346dp"
        android:layout_marginTop="671dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help" />


</androidx.constraintlayout.widget.ConstraintLayout>