<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SellersActivity">

    <TextView
        android:id="@+id/Txtprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="301dp"
        android:layout_marginBottom="645dp"
        android:text="@string/profile_photo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtdecription"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="590dp"
        android:ems="10"
        android:hint="@string/eg_mens_women_childrens_clothes"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#2E7D32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/imagebtnupload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="664dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_upload"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/upload_profile_photo" />

    <Button
        android:id="@+id/btnSUBMIT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="301dp"
        android:layout_marginBottom="480dp"
        android:backgroundTint="#0097A7"
        android:text="@string/submiT"
        android:onClick="onPostButtonClick"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtnumber"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="548dp"
        android:ems="10"
        android:hint="@string/enter_your_business_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtinst1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="318dp"
        android:layout_marginEnd="327dp"
        android:layout_marginBottom="394dp"
        android:text="@string/_1_upload_your_profile_photo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="327dp"
        android:layout_marginBottom="368dp"
        android:text="@string/_2_enter_the_descrition_of_the_goods_you_are_selling"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtint3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="327dp"
        android:layout_marginBottom="340dp"
        android:text="@string/_3_enter_your_phone_number"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtint4"
        android:layout_width="402dp"
        android:layout_height="147dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="399dp"
        android:layout_marginEnd="327dp"
        android:layout_marginBottom="313dp"
        android:text="@string/_4_send_your_business_proposal_to_shekijojo05_gamil_com_and_more_details_will_be_communicated_their_on_how_to_go_about_your_business"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="426dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instructions" />

</androidx.constraintlayout.widget.ConstraintLayout>