<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FeedbackActivity">

    <TextView
        android:id="@+id/txt_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="668dp"
        android:text="@string/cs_haven"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_the_app"
        android:textColor="#303F9F"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="538dp"
        android:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="472dp"
        android:text="@string/get_clothings_and_shoes_of_your_choice_at_a_resonable_price"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="411dp"
        android:ems="10"
        android:hint="@string/Leave_your_reviews_here"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/leave_your_reviews_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="363dp"
        android:backgroundTint="#FFC107"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="94dp"
        android:layout_height="71dp"
        android:layout_marginStart="309dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="657dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feedbaclk" />

    <TextView
        android:id="@+id/txtMatters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="292dp"
        android:text="@string/your_feedback_matters_to_us"
        android:textColor="#016156"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="228dp"
        android:layout_height="272dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clothess" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="131dp"
        android:layout_height="111dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="277dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="343dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoea" />

</androidx.constraintlayout.widget.ConstraintLayout>